--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@tsparticles/slim": "^3.5.0",
     "axios": "^1.7.3",
     "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "framer-motion": "^11.2.14",
     "i": "^0.3.7",
     "notistack": "^3.0.1",
@@ -28,7 +29,8 @@
     "react-slick": "^0.30.2",
     "react-slideshow-image": "^4.3.1",
     "slick-carousel": "^1.8.1",
-    "tailwind-merge": "^2.4.0"
+    "tailwind-merge": "^2.4.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
