--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@tsparticles/slim": "^3.5.0",
     "axios": "^1.7.3",
     "clsx": "^2.1.1",
+    "firebase": "^10.13.0",
     "framer-motion": "^11.2.14",
     "i": "^0.3.7",
     "notistack": "^3.0.1",
