--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@iconscout/react-unicons": "^2.0.2",
+    "@mui/material": "^6.0.0",
     "@reduxjs/toolkit": "^2.2.6",
+    "@tabler/icons-react": "^3.14.0",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
@@ -19,18 +23,19 @@
     "clsx": "^2.1.1",
     "firebase": "^10.13.0",
     "formik": "^2.4.6",
-    "framer-motion": "^11.2.14",
+    "framer-motion": "^11.3.30",
     "i": "^0.3.7",
     "notistack": "^3.0.1",
     "npm": "^10.8.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
     "react-slideshow-image": "^4.3.1",
     "slick-carousel": "^1.8.1",
-    "tailwind-merge": "^2.4.0",
+    "tailwind-merge": "^2.5.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
