--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
     "axios": "^1.7.3",
+    "chart.js": "^4.4.4",
     "clsx": "^2.1.1",
     "firebase": "^10.13.0",
     "formik": "^2.4.6",
@@ -28,6 +29,7 @@
     "notistack": "^3.0.1",
     "npm": "^10.8.2",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
