--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
+    "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.7.3",
     "chart.js": "^4.4.4",
     "clsx": "^2.1.1",
